feat: 完善终端美化

--- a/source/_posts/来啊，宝，手摸手教你美化终端.md
+++ b/source/_posts/来啊，宝，手摸手教你美化终端.md
@@ -17,7 +17,20 @@ date: 2021-07-27 20:18:08
 
 可以做很多定制化的处理，丰富的主题和插件
 
-[安装](https://ohmyz.sh/)
+命令
+```
+sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+```
+### 安装报错处理
+可能会有443的报错
+ Failed to connect to raw.githubusercontent.com port 443 after 18 ms: Connection refused
+
+大概率是dns污染导致的，解决方案：添加host配置，建议使用SwitchHosts
+```
+199.232.68.133 raw.githubusercontent.com
+```
+
+[参考官网](https://ohmyz.sh/)
 
 ### 安装 Powerlevel10k
 
@@ -35,4 +48,14 @@ plugins=(
   zsh-syntax-highlighting
   zsh-autosuggestions
 )
+```
+#### autojump的使用
+1. 首先要用 cd 命令进入过对应文件夹一次，以让 autojump 记录,下次输入 j+ 空格 + tab 可以查看历史记录
+2. 跳转到对应目录
+```
+j github
+```
+3. 使用资源管理器打开对应路径的文件
+```
+jo github
 ```
