--- a/source/_posts/来啊，宝，手摸手教你美化终端.md
+++ b/source/_posts/来啊，宝，手摸手教你美化终端.md
@@ -39,17 +39,23 @@ sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/too
 [安装](https://github.com/romkatv/powerlevel10k/)
 
 ### 常用插件
+下面是我的插件配置，其中git,extract 为zsh自带插件，其他需要另外安装，安装方法见下文
 
 ```
 plugins=(
   git
-  github
+  extract
   autojump
   zsh-syntax-highlighting
   zsh-autosuggestions
 )
 ```
 #### autojump的使用
+安装
+```
+brew install autojump
+```
+使用
 1. 首先要用 cd 命令进入过对应文件夹一次，以让 autojump 记录,下次输入 j+ 空格 + tab 可以查看历史记录
 2. 跳转到对应目录
 ```
