--- a/source/_posts/来啊，宝，手摸手教你美化终端.md
+++ b/source/_posts/来啊，宝，手摸手教你美化终端.md
@@ -50,7 +50,7 @@ plugins=(
   zsh-autosuggestions
 )
 ```
-#### autojump的使用
+#### autojump的安装及使用
 安装
 ```
 brew install autojump
@@ -65,3 +65,20 @@ j github
 ```
 jo github
 ```
+#### zsh-syntax-highlighting的安装及使用
+安装
+```
+git clone https://github.com/zsh-users/zsh-syntax-highlighting ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting
+
+```
+使用
+命令高亮插件，命令不再只是同一个颜色了
+
+#### zsh-autosuggestions的安装及使用
+安装
+```
+git clone git://github.com/zsh-users/zsh-autosuggestions $ZSH_CUSTOM/plugins/zsh-autosuggestions
+git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions
+```
+使用
+输入时按右方向键→自动补全命令
