feat: 添加autojump修改权重命令

--- a/source/_posts/来啊，宝，手摸手教你美化终端.md
+++ b/source/_posts/来啊，宝，手摸手教你美化终端.md
@@ -66,6 +66,11 @@ j github
 jo github
 
 ```
+这里对于名称相似的文件夹，或者又包含关系的可以查看路径权重，或者直接修改文件
+```
+j --stat 
+```
+
 #### zsh-syntax-highlighting的安装及使用
 安装
 ```
